sass/web.magazin/modules/teaser/_teaser.sass
// basic classes for default teaser

%teaser
	margin-bottom: $compact
	min-height: remify(220px) // fallback for expired images
	position: relative
	width: 100%

%teaser__media
	margin: 0 0 remify(18px)

%teaser__text
	color: inherit
	display: block

%teaser__link
	color: inherit
	display: block
	+on-interaction
		color: inherit

%teaser__kicker
	display: block
	font-size: $font-s
	font-weight: normal
	letter-spacing: $hair

%teaser__title-box
	align-items: center
	display: flex
	flex-flow: row wrap
	font-weight: normal
	margin: 0

%teaser__title
	display: block
	font-size: $font-ml
	font-weight: bold
	line-height: 1.25
	margin: remify(4px 0 0)
	width: 100%

%teaser__subtitle
	font-size: $font-s
	margin: remify(9px 0 0)

// standart teaser shadows
%teaser--dark
	a
		+fake-box-shadow-inset($black, 0.8)

%teaser--light
	a
		+fake-box-shadow-inset($white)

%teaser__series-label
	font-size: em(12px)
	letter-spacing: $letter-spacing-l
	margin: 0 0 remify(4px)
	text-transform: uppercase

// standart teaser if nothing else applies
// will hopefully be never shown
.teaser
	@extend %teaser
	padding: 0 remify(28px)
	+respond-min($break-2)
		padding: 0
	&__media
		@extend %teaser__media
		max-height: remify(165px)
	&__title-box
		@extend %teaser__title-box
	&__text
		@extend %teaser__text
	&__kicker
		@extend %teaser__kicker
	&__title
		@extend %teaser__title
	&__subtitle
		@extend %teaser__subtitle
	&__series-label
		@extend %teaser__series-label

